--- a/notebooks/llama-2/finetune_llama-2.ipynb
+++ b/notebooks/llama-2/finetune_llama-2.ipynb
@@ -428,8 +428,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='5' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  5/375 00:30 < 1:03:11, 0.10 it/s, Epoch 0.03/3]\n",
+       "      <progress value='375' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [375/375 34:57, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -439,6 +439,66 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>1.572400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50</td>\n",
+       "      <td>1.473000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75</td>\n",
+       "      <td>1.313100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>100</td>\n",
+       "      <td>1.351500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>125</td>\n",
+       "      <td>1.399300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>150</td>\n",
+       "      <td>1.202700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>175</td>\n",
+       "      <td>1.267200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>200</td>\n",
+       "      <td>1.239900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>225</td>\n",
+       "      <td>1.313700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>250</td>\n",
+       "      <td>1.283500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>275</td>\n",
+       "      <td>1.165700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>300</td>\n",
+       "      <td>1.194500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>325</td>\n",
+       "      <td>1.210700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>350</td>\n",
+       "      <td>1.264300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>375</td>\n",
+       "      <td>1.257100</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -448,6 +508,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=375, training_loss=1.300577173868815, metrics={'train_runtime': 2109.3632, 'train_samples_per_second': 1.422, 'train_steps_per_second': 0.178, 'total_flos': 2.684361754312704e+16, 'train_loss': 1.300577173868815, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -469,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,9 +573,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/transformers/generation/utils.py:1270: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation )\n",
+      "  warnings.warn(\n",
+      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/torch/utils/checkpoint.py:91: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INST] What is a large language model? [/INST] A large language model is a type of artificial intelligence (AI) model that is trained on a large dataset of text to generate human-like language. everybody is talking about the large language models, but what are they?\n",
+      "\n",
+      "Large language models are neural networks that are trained on large datasets of text to generate human-like language. They are trained on a large dataset of text, such as books, articles, and websites, and are designed to generate text that is similar to the text in the training dataset.\n",
+      "\n",
+      "Large language models are trained using a technique called \"masked language modeling.\" In this technique, the model is trained to predict the next word in a sequence of text, given the previous words in the sequence. The model is trained on a large dataset of text, and the goal is to generate text that is similar to the text in the training dataset.\n",
+      "\n",
+      "Large language models are\n"
+     ]
+    }
+   ],
    "source": [
     "# Ignore warnings\n",
     "logging.set_verbosity(logging.CRITICAL)\n",
@@ -519,9 +613,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Empty VRAM\n",
     "del model\n",
@@ -543,9 +648,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.13s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# Reload model in FP16 and merge it with LoRA weights\n",
     "base_model = AutoModelForCausalLM.from_pretrained(\n",
@@ -561,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
