--- a/notebooks/llama-2/finetune_llama-2.ipynb
+++ b/notebooks/llama-2/finetune_llama-2.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "To know how this dataset was created, you can check this notebook: https://colab.research.google.com/drive/1Ad7a9zMmkxuXTOh1Z7-rNSICA4dybpM2?usp=sharing\n",
     "\n",
-    "> Note: You don't need to follow a specific prompt template if you are using the base Llama-2 model instead of the chat version \n",
+    "> Note: You don't need to follow a specific prompt template if you are using the base Llama-2 model instead of the chat version.\n",
     "\n",
     "### How to fine tune Llama 2\n",
     "- Free Goolge Colab offers a 15GB Graphics Card (Limited Resources --> Barely enough to store Llama 2-7b's weights).\n",
@@ -708,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.undefined"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
