--- a/notebooks/llama-2/finetune_llama-2.ipynb
+++ b/notebooks/llama-2/finetune_llama-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os \n",
     "import torch \n",
@@ -103,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +165,7 @@
     "output_dir = \"./results\"\n",
     "\n",
     "# Number of training epochs\n",
-    "num_train_epochs = 3\n",
+    "num_train_epochs = 10\n",
     "\n",
     "# Enable fp16/bf16 training (set bf16 to True with an A100)\n",
     "fp16 = False\n",
@@ -221,12 +212,12 @@
     "save_steps = 0\n",
     "\n",
     "# Log every X updates steps\n",
-    "logging_steps = 25"
+    "logging_steps = 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,19 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "================================================================================\n",
-      "Your GPU supports bfloat16: accelerate training with bf16=True\n",
-      "================================================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check GPU compatibility with bfloat16\n",
     "if compute_dtype == torch.float16 and use_4bit:\n",
@@ -316,19 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.06it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load base model\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
@@ -342,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,128 +369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/peft/utils/other.py:102: FutureWarning: prepare_model_for_int8_training is deprecated and will be removed in a future version. Use prepare_model_for_kbit_training instead.\n",
-      "  warnings.warn(\n",
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/trl/trainer/sft_trainer.py:159: UserWarning: You didn't pass a `max_seq_length` argument to the SFTTrainer, this will default to 1024\n",
-      "  warnings.warn(\n",
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py:33: UserWarning: \n",
-      "    There is an imbalance between your GPUs. You may want to exclude GPU 1 which\n",
-      "    has less than 75% of the memory or cores of GPU 0. You can do so by setting\n",
-      "    the device_ids argument to DataParallel, or by setting the CUDA_VISIBLE_DEVICES\n",
-      "    environment variable.\n",
-      "  warnings.warn(imbalance_warn.format(device_ids[min_pos], device_ids[max_pos]))\n",
-      "You're using a LlamaTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/torch/utils/checkpoint.py:464: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
-      "  warnings.warn(\n",
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='375' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [375/375 34:57, Epoch 3/3]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>25</td>\n",
-       "      <td>1.572400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>50</td>\n",
-       "      <td>1.473000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75</td>\n",
-       "      <td>1.313100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>100</td>\n",
-       "      <td>1.351500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>125</td>\n",
-       "      <td>1.399300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>150</td>\n",
-       "      <td>1.202700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>175</td>\n",
-       "      <td>1.267200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>200</td>\n",
-       "      <td>1.239900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>225</td>\n",
-       "      <td>1.313700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>250</td>\n",
-       "      <td>1.283500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>275</td>\n",
-       "      <td>1.165700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>300</td>\n",
-       "      <td>1.194500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>325</td>\n",
-       "      <td>1.210700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>350</td>\n",
-       "      <td>1.264300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>375</td>\n",
-       "      <td>1.257100</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=375, training_loss=1.300577173868815, metrics={'train_runtime': 2109.3632, 'train_samples_per_second': 1.422, 'train_steps_per_second': 0.178, 'total_flos': 2.684361754312704e+16, 'train_loss': 1.300577173868815, 'epoch': 3.0})"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set supervised fine-tuning parameters\n",
     "trainer = SFTTrainer(\n",
@@ -539,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,33 +425,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/transformers/generation/utils.py:1270: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation )\n",
-      "  warnings.warn(\n",
-      "/rhome/f111169109/.conda/envs/albygpt/lib/python3.9/site-packages/torch/utils/checkpoint.py:91: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INST] What is a large language model? [/INST] A large language model is a type of artificial intelligence (AI) model that is trained on a large dataset of text to generate human-like language. everybody is talking about the large language models, but what are they?\n",
-      "\n",
-      "Large language models are neural networks that are trained on large datasets of text to generate human-like language. They are trained on a large dataset of text, such as books, articles, and websites, and are designed to generate text that is similar to the text in the training dataset.\n",
-      "\n",
-      "Large language models are trained using a technique called \"masked language modeling.\" In this technique, the model is trained to predict the next word in a sequence of text, given the previous words in the sequence. The model is trained on a large dataset of text, and the goal is to generate text that is similar to the text in the training dataset.\n",
-      "\n",
-      "Large language models are\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ignore warnings\n",
     "logging.set_verbosity(logging.CRITICAL)\n",
@@ -613,20 +441,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Empty VRAM\n",
     "del model\n",
@@ -648,17 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.13s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reload model in FP16 and merge it with LoRA weights\n",
     "base_model = AutoModelForCausalLM.from_pretrained(\n",
@@ -674,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,11 +494,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 8: Push Model to Hugging Face Hub\n",
+    "Our weights are merged and we reloaded the tokenizer. We can now push everything to the Hugging Face Hub to save our model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import locale\n",
+    "locale.getpreferredencoding = lambda: \"UTF-8\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use this in terminal\n",
+    "# !huggingface-cli login"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.push_to_hub(\"trantuan225/Llama-2-7b-chat-finetune\", check_pr=True)\n",
+    "\n",
+    "tokenizer.push_to_hub(\"trantuan225/Llama-2-7b-chat-finetune\", check_pr=True)"
+   ]
   }
  ],
  "metadata": {
