--- a/notebooks/llama3/llama3_finetune.ipynb
+++ b/notebooks/llama3/llama3_finetune.ipynb
@@ -581,8 +581,8 @@
       "source": [
         "# model.save_pretrained(\"llama3_8b_instruct_lora\") # Local saving\n",
         "# tokenizer.save_pretrained(\"llama3_8b_instruct_lora\")\n",
-        "# model.push_to_hub(\"trantuan225/my_lora_llama3_model\", token=\"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\") # Online saving\n",
-        "# tokenizer.push_to_hub(\"trantuan225/my_lora_llama3_model\", token=\"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\") # Online saving"
+        "# model.push_to_hub(\"trantuan225/my_lora_llama3_model\", token=\"\") # Online saving\n",
+        "# tokenizer.push_to_hub(\"trantuan225/my_lora_llama3_model\", token=\"\") # Online saving"
       ]
     },
     {
@@ -793,7 +793,7 @@
         "#     \"trantuan225/llama3_8b_instruct_lora_merged16bit\", \n",
         "#     tokenizer, \n",
         "#     save_method=\"merged_16bit\",\n",
-        "#     token=\"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\") # <=== Chưa cần dùng bây giờ \n",
+        "#     token=\"\") # <=== Chưa cần dùng bây giờ \n",
         "\n",
         "# # Merge to 4bit\n",
         "# if False: model.save_pretrained_merged(\"lora_llama3_finetuned\", tokenizer, save_method = \"merged_4bit\",)\n",
@@ -889,7 +889,7 @@
         "\n",
         "# Save to 16bit GGUF\n",
         "# if True: model.save_pretrained_gguf(\"llama3_8b_instruct_lora_merged16bit_gguf\", tokenizer, quantization_method = \"f16\") ==> Đã xong\n",
-        "# if True: model.push_to_hub_gguf(\"trantuan225/llama3_8b_instruct_lora_merged16bit_gguf\", tokenizer, quantization_method = \"f16\", token = \"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\")\n",
+        "# if True: model.push_to_hub_gguf(\"trantuan225/llama3_8b_instruct_lora_merged16bit_gguf\", tokenizer, quantization_method = \"f16\", token=\"\")\n",
         "\n",
         "# # Save to q4_k_m GGUF\n",
         "# if False: model.save_pretrained_gguf(\"lora_llama3_finetuned\", tokenizer, quantization_method = \"q4_k_m\")\n",
